# webwise-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
webwise/: .gitignore  __init__.py  agents.py  config.py  llm.py  prompts.py  system.py  utils.py
webwise/prompts/: __init__.py  content_extractor_prompt.txt  coordinator_prompt.txt  wiki_search_prompt.txt
