[build-system]
requires = ["setuptools", "setuptools-scm"]
requires-python = ">=3.12"
build-backend = "setuptools.build_meta"

[project]
name = "webwise-agent"
version = "0.1.0"
description = "An intelligent multi-agent system for web-based information retrieval and analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

# Dependencies organized by purpose
dependencies = [
    # Core ML/AI
    "torch>=2.0.0",
    "transformers[agents]>=4.30.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "bitsandbytes>=0.41.0",
    
    # Language Models & Embeddings
    "langchain-community>=0.0.1",
    "langchain-huggingface>=0.0.1",
    "faiss-cpu>=1.7.4",
    
    # Web Scraping & Search
    "wikipedia>=1.4.0",
    "duckduckgo_search>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    
    # Caching & Performance
    "diskcache>=5.6.1",
    "joblib>=1.3.2",
    "psutil>=5.9.5",
    "ray>=2.6.3",
    
    # Utilities
    "fastapi>=0.100.0",
    "pygments>=2.16.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "rich>=13.5.2",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0.0+cu118",
    "faiss-gpu>=1.7.4"
]

mps = [
    "torch>=2.0.0"
]

dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "ruff>=0.0.284"
]

[project.urls]
Repository = "https://github.com/yourusername/webwise-agent"
Documentation = "https://github.com/yourusername/webwise-agent#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["webwise"]
exclude = ["tests*", "examples*"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]